BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/Riportafogliazione__c.object-meta.xml
<CustomObject>
    <label>Riportafogliazione</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Riportafogliazione Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Riportafogliazione</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>