BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/ABI__c.field-meta.xml
<CustomField>
    <fullName>ABI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ABI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>