BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Accordato__c.field-meta.xml
<CustomField>
    <fullName>Accordato__c</fullName>
    <formula>NDGId__r.PTF_Accordato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accordato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>