BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Altro__c.field-meta.xml
<CustomField>
    <fullName>Altro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Altro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>