BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Riportafogliazione (Area)</relationshipLabel>
    <relationshipName>Riportafogliazione5</relationshipName>
    <type>Lookup</type>
</CustomField>