BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Banca__c.field-meta.xml
<CustomField>
    <fullName>Banca__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banca</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Riportafogliazione (Banca)</relationshipLabel>
    <relationshipName>Riportafogliazione3</relationshipName>
    <type>Lookup</type>
</CustomField>