BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Calcolo_Percentuale__c.field-meta.xml
<CustomField>
    <fullName>Calcolo_Percentuale__c</fullName>
    <formula>AND(NOT( Stato_Spostamento__c ),NOT(Portafoglio_Alternativo_Valorizzato__c))</formula>
    <label>Calcolo Percentuale</label>
    <type>Checkbox</type>
</CustomField>