BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Cambio_MMDS__c.field-meta.xml
<CustomField>
    <fullName>Cambio_MMDS__c</fullName>
    <formula>IF( LOWER(MMDS_Obiettivo__c)  &lt;&gt; LOWER(MMDS_Alternativo__c),true,false)</formula>
    <label>Cambio MMDS</label>
    <type>Checkbox</type>
</CustomField>