BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Direzione_Regionale__c.field-meta.xml
<CustomField>
    <fullName>Direzione_Regionale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direzione Regionale</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Riportafogliazione (Direzione Regionale)</relationshipLabel>
    <relationshipName>Riportafogliazione4</relationshipName>
    <type>Lookup</type>
</CustomField>