BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Fatturato__c.field-meta.xml
<CustomField>
    <fullName>Fatturato__c</fullName>
    <formula>NDGId__r.AnnualRevenue</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fatturato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>