BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Filiale_New__c.field-meta.xml
<CustomField>
    <fullName>Filiale_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filiale New</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Riportafogliazione (Filiale New)</relationshipLabel>
    <relationshipName>Riportafogliazione2</relationshipName>
    <type>Lookup</type>
</CustomField>