BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Filiale_Old__c.field-meta.xml
<CustomField>
    <fullName>Filiale_Old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filiale Old</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Riportafogliazione (Filiale Old)</relationshipLabel>
    <relationshipName>Riportafogliazione1</relationshipName>
    <type>Lookup</type>
</CustomField>