BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Id_Ced_Di_Partenza__c.field-meta.xml
<CustomField>
    <fullName>Id_Ced_Di_Partenza__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Id Ced Di Partenza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>