BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Matricola__c.field-meta.xml
<CustomField>
    <fullName>Matricola__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Matricola</label>
    <length>255</length>
    <type>Text</type>
</CustomField>