BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/MMDS__c.field-meta.xml
<CustomField>
    <fullName>MMDS__c</fullName>
    <formula>NDGId__r.PTF_ModelloDiServizio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MMDS</label>
    <type>Text</type>
</CustomField>