BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/MMDS_Alternativo__c.field-meta.xml
<CustomField>
    <fullName>MMDS_Alternativo__c</fullName>
    <formula>TEXT(Portafoglio_Alternativo__r.PTF_ModelloDiServizio__c)</formula>
    <label>MMDS Alternativo</label>
    <type>Text</type>
</CustomField>