BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/MMDS_Obiettivo__c.field-meta.xml
<CustomField>
    <fullName>MMDS_Obiettivo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MMDS Obiettivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>