BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Motivo_di_rifiuto__c.field-meta.xml
<CustomField>
    <fullName>Motivo_di_rifiuto__c</fullName>
    <label>Motivo di rifiuto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Motivo 1</fullName>
            </value>
            <value>
                <fullName>Motivo 2</fullName>
            </value>
            <value>
                <fullName>Motivo 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>