BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/NDG__c.field-meta.xml
<CustomField>
    <fullName>NDG__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NDG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>