BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/NDGId__c.field-meta.xml
<CustomField>
    <fullName>NDGId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NDGId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Riportafogliazione</relationshipLabel>
    <relationshipName>Riportafogliazione</relationshipName>
    <type>Lookup</type>
</CustomField>