BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Nome_Area__c.field-meta.xml
<CustomField>
    <fullName>Nome_Area__c</fullName>
    <formula>Area__r.CRM_Nome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Area</label>
    <type>Text</type>
</CustomField>