BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Nome_Filiale_Di_Partenza__c.field-meta.xml
<CustomField>
    <fullName>Nome_Filiale_Di_Partenza__c</fullName>
    <formula>Filiale_Old__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Filiale di Partenza</label>
    <type>Text</type>
</CustomField>