BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Patrimonio__c.field-meta.xml
<CustomField>
    <fullName>Patrimonio__c</fullName>
    <formula>NDGId__r.PTF_Patrimonio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patrimonio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>