BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Portafoglio_Alternativo__c.field-meta.xml
<CustomField>
    <fullName>Portafoglio_Alternativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portafoglio Alternativo</label>
    <referenceTo>Wallet__c</referenceTo>
    <relationshipLabel>Riportafogliazione (Portafoglio Alternativo)</relationshipLabel>
    <relationshipName>Riportafogliazione2</relationshipName>
    <type>Lookup</type>
</CustomField>