BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Portafoglio_Alternativo_Name__c.field-meta.xml
<CustomField>
    <fullName>Portafoglio_Alternativo_Name__c</fullName>
    <formula>Portafoglio_Alternativo__r.Name</formula>
    <label>Portafoglio Alternativo Name</label>
    <type>Text</type>
</CustomField>