BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Portafoglio_Alternativo_Valorizzato__c.field-meta.xml
<CustomField>
    <fullName>Portafoglio_Alternativo_Valorizzato__c</fullName>
    <formula>NOT( ISBLANK(Portafoglio_Alternativo__c ) )</formula>
    <label>Portafoglio Alternativo Valorizzato</label>
    <type>Checkbox</type>
</CustomField>