BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Portafoglio_New__c.field-meta.xml
<CustomField>
    <fullName>Portafoglio_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portafoglio New</label>
    <referenceTo>Wallet__c</referenceTo>
    <relationshipLabel>Riportafogliazione (Portafoglio New)</relationshipLabel>
    <relationshipName>Riportafogliazione1</relationshipName>
    <type>Lookup</type>
</CustomField>