BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Portafoglio_Old__c.field-meta.xml
<CustomField>
    <fullName>Portafoglio_Old__c</fullName>
    <label>Portafoglio Old</label>
    <referenceTo>Wallet__c</referenceTo>
    <relationshipLabel>Riportafogliazione</relationshipLabel>
    <relationshipName>Riportafogliazione</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>