BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/PTF_CheckValidation__c.field-meta.xml
<CustomField>
    <fullName>PTF_CheckValidation__c</fullName>
    <formula>IF(Portafoglio_Di_Partenza__c == NDGId__r.PTF_Portafoglio__r.Name , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Validation</label>
    <type>Checkbox</type>
</CustomField>