BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/PTF_RiportafogliazioneTAG__c.field-meta.xml
<CustomField>
    <fullName>PTF_RiportafogliazioneTAG__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TAG</label>
    <type>TextArea</type>
</CustomField>