BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Referente__c.field-meta.xml
<CustomField>
    <fullName>Referente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>