BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Rifiutato__c.field-meta.xml
<CustomField>
    <fullName>Rifiutato__c</fullName>
    <formula>IF(AND(Stato_Spostamento__c=false, OR(NOT(Portafoglio_Alternativo_Valorizzato__c),Cambio_MMDS__c)), true,false)</formula>
    <label>Rifiutato</label>
    <type>Checkbox</type>
</CustomField>