BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Stato_Spostamento__c.field-meta.xml
<CustomField>
    <fullName>Stato_Spostamento__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Stato Spostamento</label>
    <type>Checkbox</type>
</CustomField>