BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Tipo_impurezza__c.field-meta.xml
<CustomField>
    <fullName>Tipo_impurezza__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo impurezza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>