BPER/DEVF/force-app/main/default/objects/Riportafogliazione__c/fields/Utilizzato__c.field-meta.xml
<CustomField>
    <fullName>Utilizzato__c</fullName>
    <formula>NDGId__r.PTF_Utilizzato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilizzato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>